--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- 统一在 a-assets 中声明模型，避免路径/缓存问题 -->
     <a-assets timeout="20000">
-      <a-asset-item id="artifactGLB" src="assets/models/artifact.glb"></a-asset-item>
+      <a-asset-item id="artifactGLB" src="assets/models/123.glb"></a-asset-item>
     </a-assets>
 
     <!-- 摄像机 -->
